fix overflow

--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ input[type='submit']:hover, button:hover {
 #section-1 {
     height: 100vh;
     width: 100%;
-	overflow-x: hidden;
+	position: relative;
 }
 
 #profile {
@@ -525,7 +525,7 @@ left: 70vw;
 #section-3 {
     height: 110vh;
     text-align: center;
-	overflow-x: hidden;
+	position: relative;
 }
 .keyword {
     display: inline-block;
